--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ label-studio-converter = "^0.0.50"
 polars = "^0.16.6"
 transformers = "^4.26.1"
 ipywidgets = "^8.0.4"
+scikit-learn = "^1.2.1"
+evaluate = "^0.4.0"
+spacy = "^3.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pyright = "^1.1.294"
